# financial-adviser

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: version-outputs.yml
app/: agents.py  catalog.py  cli_menu.py  formatter.py  logging.py  main.py  models.py  providers.py  runner.py
app/debate/: __init__.py  engine.py  graph.py  orchestrator.py  tracing.py
app/filings/: __init__.py  cache.py  fetcher.py  prompts.py  section_parser.py  summarizer.py
app/pipeline/: __init__.py  cache.py  context.py  edgar.py  macro.py  market.py  metrics.py  news.py
app/prompts/: registry.py  sync.py
app/prompts/_shared/: analysis_pillars.md
app/prompts/bernanke/: PERSONA.md
app/prompts/buffett/: PERSONA.md
app/prompts/burry/: PERSONA.md
app/prompts/dalio/: PERSONA.md
app/prompts/dimon/: PERSONA.md
app/sectors/: __init__.py  energy.yaml  financial-services.yaml  healthcare.yaml  technology.yaml
app/watch/: aggregator.py  cli.py  langfuse_tracing.py  markdown_renderer.py  price_target.py  reference_reader.py  sector_file.py  sector_runner.py
docs/contracts/: CONTRACT_S10_PERSONAS_NEWS.md  CONTRACT_S11_OUTPUT_PATHS.md  CONTRACT_S12.md  CONTRACT_S14.md  CONTRACT_S15.md  CONTRACT_S16.md  CONTRACT_S17_GITHUB_OUTPUTS.md  CONTRACT_S1_bootstrap.md  CONTRACT_S2_core.md  CONTRACT_S4_md_and_tests.md  CONTRACT_S5_per_agent_layout.md  CONTRACT_S6_OBSERVABILITY.md  CONTRACT_S7_DEPTH_NEWS.md  QUALITY_LOG.md
tests/: _mock_provider.py  conftest.py  test_aggregator.py  test_auto_commit.py  test_clean_mocks.py  test_cli_debate.py  test_cli_sectors.py  test_cli_watch.py  test_context_enrichment.py  test_debate_fallback.py  test_debate_graph.py  test_debate_smoke.py  test_debate_synthesis.py  test_deep_prompts.py  test_filings_cache.py  test_filings_fetcher.py  test_filings_integration.py  test_formatter.py  test_graph_decorators.py  test_impact_ranked_events.py  test_metrics.py  test_models_coerce.py  test_news.py  test_orchestrator.py  test_out_preservation.py  test_output_paths.py  test_persona_domains.py  test_price_target.py  test_prompts_registry.py  test_reference_reader.py  test_renderer.py  test_s17_defaults.py  test_schema_separation.py  test_section_parser.py  test_sector_lenses.py  test_sectors.py  test_session_id.py  test_smoke.py  test_summarizer.py  test_tracing_v4.py
(+197 files in other folders)
