[project]
name = "financial-adviser"
version = "0.1.0"
description = "Multi-persona macroeconomic assessment pipeline (LangChain + Langfuse)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Market Intelligence" }]
license = { text = "Proprietary" }
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
seed-demo = "scripts.seed_demo:main"
run-assessment = "scripts.run_assessment:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]